--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -20,3 +20,13 @@
     margin-top: 10px;
     width: 60px
 }
+
+.form-control-1{
+    background-color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    box-shadow: none;
+    color: #444444;
+    height: 38px;
+    padding: 6px 16px;
+}
